# sandbox

plans/: AVD.md
services/auth/: biome.json  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json
services/auth/prisma/: schema.prisma  seed.ts
services/auth/src/: index.ts
services/auth/src/config/: env.ts  logging.ts
services/auth/src/core/: db.ts
services/auth/src/core/auth/: auth.ts  index.ts
services/auth/src/core/handler/: auth.ts  index.ts  org.ts  role.ts  root.ts  user.ts
services/auth/src/routes/: auth.ts  org.ts  root.ts  schemas.ts  user.ts
services/core/: .env.example  .gitignore  README.md  env.example  pyproject.toml
services/core/alembic/: env.py
services/core/app/: main.py
services/core/app/clients/: __init__.py  db.py
services/core/app/config/: __init__.py  logging.py
services/core/app/core/: __init__.py  dependencies.py  error_handlers.py  exceptions.py
services/core/app/models/: __init__.py  example.py
services/core/app/routes/: __init__.py  example.py  health.py
services/core/app/tasks/: __init__.py  example.py
services/core/app/utils/: __init__.py  security.py
services/core/tests/: __init__.py  conftest.py  test_example.py  test_health.py
web/: .cta.json  package.json  pnpm-lock.yaml
web/src/routes/: __root.tsx
